--- a/style.css
+++ b/style.css
@@ -20,4 +20,30 @@ margin-bottom: 100px;
 }
 .chamada-texto{
     margin: right 5%;
-}h1
+}
+h1{
+    font-size: 35px;
+}
+.categoria{
+    background: plum;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
+}
+.categoria-video{
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
+.categoria-videos img{
+    height: 20px;
+    opacity: 0.5;
+}
+.categoria-videos img houver{
+    opacity: 1.0;
+    border: 3px solid red;
+}
+h2{
+    font-size: 25px;
+}
+    
